Fix event image on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -148,4 +148,9 @@ html {
   .janela {
       width: 90%;
   }
+
+  .event-image {
+    width: 100%;
+    height: auto;
+  }
 }
